# writing_disappearing_text_app

./: README.md  main.py  pyproject.toml
disappearing_text_app/: timer.py  ui.py
