[tool.poetry]
name = "writing-disappearing-text-app"
version = "0.1.0"
description = "Stop over-thinking your writing, or you'll lose your progress in this app built using tkinter"
authors = ["MCDAngelo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ttkbootstrap = "^1.10.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.11.0"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
